deploy/overlays/automate/_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
spec:
  rules:
  - host: fix.me
    http:
      paths:
      - backend:
          service:
            name: http
            port:
              number: 9898
        path: /
        pathType: Prefix
